multiwave function created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     <canvas id="canvas" width="600" height="400"></canvas>
+
+    <form action="">
+
+        <label for="intervalo">intervalo</label>
+        <input type="number" name="intervalo" id="intervalo" value="10">
+
+        <label for="cantidad">cantidad</label>
+        <input type="number" name="cantidad" id="cantidad" value="10">
+
+        <button id='multiWave' type="submit">multi</button> 
+    </form>
+
     <script src="script.js"></script>
 </body>
 </html>
