--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
 <body>
     <canvas id="canvas" width="600" height="400"></canvas>
 
-    <form action="">
+    <form id='multiWaveForm' action="">
 
         <label for="intervalo">intervalo</label>
-        <input type="number" name="intervalo" id="intervalo" value="10">
+        <input type="number" name="intervalo" id="intervalo" required>
 
         <label for="cantidad">cantidad</label>
-        <input type="number" name="cantidad" id="cantidad" value="10">
+        <input type="number" name="cantidad" id="cantidad" required>
+
+        <label for="funciones">funciones</label>
+        <select name="funciones" id="funciones">
+            <option value="Doppler">Efecto Doppler</option>
+            <option value="MultiOnda">Multi onda individual</option>
+            <option value="MultiMultiOnda">Multi onda doble</option>
+        </select>
+        
 
         <button id='multiWave' type="submit">multi</button> 
     </form>
