Multiwaves functions ready

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <form id='multiWaveForm' action="">
 
         <label for="intervalo">intervalo</label>
-        <input type="number" name="intervalo" id="intervalo" required>
+        <input type="number" name="intervalo" id="intervalo" value="1000" required>
 
         <label for="cantidad">cantidad</label>
-        <input type="number" name="cantidad" id="cantidad" required>
+        <input type="number" name="cantidad" id="cantidad" value="5" required>
 
         <label for="funciones">funciones</label>
         <select name="funciones" id="funciones">
-            <option value="Doppler">Efecto Doppler</option>
-            <option value="MultiOnda">Multi onda individual</option>
-            <option value="MultiMultiOnda">Multi onda doble</option>
+            <option value="1">Efecto Doppler</option>
+            <option value="2">Multi onda individual</option>
+            <option value="3">Multi onda doble</option>
         </select>
         
 
